<resources>
    <string name="app_name">手机卫士</string>
    <string name="dummy_content">开启手机卫士的神器之旅</string>
    <string name="version_name">版本号：%s</string>
    <string name="home_notice">手机卫士正式版上线啦，全面为你的爱机保驾护航！亲们，赶紧升级到最新版本吧！更有机会赢得iPhone6s Plus哦！</string>
    <string name="title_security">手机防盗</string>
    <string name="title_guide1">手机防盗 - 欢迎</string>
    <string name="title_guide2">手机防盗 - 绑定SIM卡</string>
    <string name="title_guide3">手机防盗 - 设置安全号码</string>
    <string name="title_guide4">手机防盗 - 开启防盗保护</string>
    <string name="title_blacklist">黑名单</string>
    <string name="title_add_black">添加黑名单</string>
    <string name="title_edit_black">编辑黑名单</string>
    <string name="title_app_manager">APP管理</string>
    <string name="title_number_selection">选一个号码</string>
    <string name="prev_step">上一步</string>
    <string name="next_step">下一步</string>
    <string name="tip_guide1_0">开启后将可用以下功能：</string>
    <string name="tip_guide1_1">SIM卡变更报警</string>
    <string name="tip_guide1_2">GPS追踪</string>
    <string name="tip_guide1_3">远程销毁数据</string>
    <string name="tip_guide1_4">远程锁屏</string>
    <string name="tip_guide2_0">绑定SIM卡：</string>
    <string name="tip_guide2_1">下次重启手机，如果发现SIM卡变化，发送报警短信。</string>
    <string name="tip_guide2_2">开启绑定SIM卡</string>
    <string name="tip_guide2_3_off">未绑定SIM卡</string>
    <string name="tip_guide2_3_on">已绑定SIM卡</string>
    <string name="tip_guide3_1">在SIM卡变更后，报警短信将会发送到指定的安全号码。</string>
    <string name="tip_guide3_2">请输入安全号码</string>
    <string name="tip_guide3_3">从联系人中选择</string>
    <string name="tip_guide4_1">开启防盗保护</string>
    <string name="tip_guide4_2_off">未开启防盗保护</string>
    <string name="tip_guide4_2_on">已开启防盗保护</string>
    <string name="tip_password">请输入密码</string>
    <string name="tip_password_again">请再次输入密码</string>
    <string name="tip_black_list_empty">还没有黑名单呢。</string>
    <string name="succeed">完成</string>
    <string name="settings">设置</string>
    <string name="unsetting">未设置</string>
    <string name="security_phone">安全号码</string>
    <string name="security_status">防盗开启状态</string>
    <string name="security_functions">功能使用</string>
    <string name="security_location">[GPS追踪] *#location#*</string>
    <string name="security_alarm">[播放报警音乐] *#alarm#*</string>
    <string name="security_wipedata">[远程删除数据] *#wipedata#*</string>
    <string name="security_lockscreen">[远程锁屏] *#lockscreen#*</string>
    <string name="phone">电话</string>
    <string name="message">短信</string>
    <string name="all">全部</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="delete_all">删除全部</string>
    <string name="clear">清空</string>
    <string name="stranger">陌生人</string>
    <string name="black_count">(%s)</string>
    <string name="tip_input_number">输入黑名单号码</string>
    <string name="description">备注</string>
    <string name="save">保存</string>
    <string name="add_black_from_call_log">从通话记录选择</string>
    <string name="add_black_from_sms">从短信选择</string>
    <string name="add_black_from_contact">从联系人选择</string>
    <string name="system_app">系统应用</string>
    <string name="user_app">用户应用</string>
    <string name="detail">详情</string>
    <string name="uninstall">卸载</string>
    <string name="run">运行</string>
    <string-array name="add_black_from">
        <item>从通话记录选择</item>
        <item>从短信选择</item>
        <item>从联系人选择</item>
        <item>手动输入</item>
    </string-array>
    <string-array name="black_descriptions">
        <item>诈骗</item>
        <item>推销</item>
        <item>中介</item>
        <item>快递</item>
        <item>外卖</item>
        <item>自定义</item>
    </string-array>

    <!-- Manifest strings: 设备管理器(MyDeviceAdminReceiver) -->
    <string name="device_admin_description">必须将手机卫士激活为系统的设备管理器，才可以使用手机防盗的功能。</string>
    <string name="device_admin_introduction">必须将手机卫士激活为系统的设备管理器，才可以使用以下防盗功能：\n1.远程锁屏\n2.远程设置锁屏密码\n3.远程清除手机数据</string>
</resources>
