<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.EditBlackActivity">
    <item
        android:id="@+id/black_save"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom" />
    <group>
        <item
            android:id="@+id/add_black_call_log"
            android:title="@string/add_black_from_call_log" />
        <item
            android:id="@+id/add_black_sms"
            android:title="@string/add_black_from_sms" />
        <item
            android:id="@+id/add_black_contact"
            android:title="@string/add_black_from_contact" />
    </group>
</menu>