<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.EditBlackActivity">

    <android.support.v7.widget.Toolbar
        android:id="@id/toolbar"
        style="@style/ToolbarStyle"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/title_add_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/common_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/black_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_input_number"
            android:inputType="phone" />

        <TextView
            android:id="@+id/black_attribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin" />

        <RadioGroup
            android:id="@+id/black_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@android:id/selectAll"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/black_phone"
                android:text="@string/phone" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/block_message"
                android:layout_weight="1"
                android:text="@string/message" />

            <RadioButton
                android:id="@android:id/selectAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all" />
        </RadioGroup>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/black_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />

    </LinearLayout>

</LinearLayout>