<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gmt.mobileguard.activity.SecurityActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:src="@drawable/phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/Guide_Text"
            android:layout_margin="@dimen/common_margin"
            android:text="@string/tip_guide3_1"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/guide_3_phone"
            style="@style/Guide_Text"
            android:layout_margin="@dimen/common_margin"
            android:layout_width="match_parent"
            android:hint="@string/tip_guide3_2"
            android:inputType="phone" />

        <Button
            android:id="@+id/guide_3_select_phone"
            style="@style/Guide_Text"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/common_margin"
            android:background="@drawable/btn_common"
            android:text="@string/tip_guide3_3"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@color/md_grey_400" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@color/md_grey_400" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@color/md_green_400" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@color/md_grey_400" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding">

        <Button
            android:id="@+id/prev_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_common"
            android:text="@string/prev_step"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_common"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>