<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gmt.mobileguard.activity.SecurityActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/common_margin"
        android:src="@drawable/bind" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/Guide_TextView"
            android:drawableLeft="@null"
            android:gravity="center_vertical"
            android:text="@string/tip_guide2_1" />

        <Switch
            android:id="@+id/guide_2_bind_sim"
            style="@style/Guide_TextView"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/common_margin"
            android:checked="true"
            android:drawableLeft="@null"
            android:gravity="start|center_vertical"
            android:text="@string/tip_guide2_2" />

        <TextView
            android:id="@+id/guide_2_bind_sim_tips"
            style="@style/Guide_TextView"
            android:drawableLeft="@null"
            android:text="@string/tip_guide2_3_on"
            android:textColor="@color/md_grey_500"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@color/md_grey_400" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@color/md_green_400" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@color/md_grey_400" />

        <View
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_margin="5dp"
            android:background="@color/md_grey_400" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding">

        <Button
            android:id="@+id/prev_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_common"
            android:text="@string/prev_step"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_common"
            android:text="@string/next_step"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>