<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    tools:context=".activity.BlacklistActivity">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/black_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/md_grey_800"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/black_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/black_number"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_toEndOf="@id/black_number"
            android:layout_toRightOf="@id/black_number"
            android:text="@string/black_count"
            android:textColor="@color/md_deep_orange_700"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/black_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/black_number"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/black_attribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/black_name"
            android:layout_toEndOf="@+id/black_name"
            android:layout_toRightOf="@+id/black_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/black_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/phone"
        android:textColor="@color/md_grey_800"
        app:buttonTint="@color/md_deep_orange_400" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/block_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@color/md_grey_800"
        app:buttonTint="@color/md_deep_orange_400" />

</LinearLayout>